--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
-    "typescript": "~4.0.0"
+    "typescript": "~4.0.0",
+    "@react-navigation/native": "^5.9.3",
+    "@react-navigation/stack": "^5.14.4",
+    "react-native-screens": "~2.15.0",
+    "react-native-gesture-handler": "~1.8.0"
   },
   "private": true
 }
