--- a/package.json
+++ b/package.json
@@ -13,18 +13,19 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-paper": "^4.7.2",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@react-navigation/native": "^5.9.3",
+    "@react-navigation/stack": "^5.14.4",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
-    "typescript": "~4.0.0",
-    "@react-navigation/native": "^5.9.3",
-    "@react-navigation/stack": "^5.14.4",
+    "react-native-gesture-handler": "~1.8.0",
     "react-native-screens": "~2.15.0",
-    "react-native-gesture-handler": "~1.8.0"
+    "typescript": "~4.0.0"
   },
   "private": true
 }
