--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.4",
+    "@react-navigation/material-bottom-tabs": "^5.3.15",
+    "@types/mathjs": "^6.0.11",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
+    "mathjs": "^9.3.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
